--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@
 
 List of the most important changes in every version.
 
+## v1.1.1
+
+- Add an Exception when the Payplug account is not activate and raise a 403 HTTP error. In this case only TEST mode is authorize.
+
 ## v1.0
 
 - Add possibility to test transactions on test environment (Sandbox)
